j'ai ajouté tous les effets dynamiques qui étaient demandés

--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
     <main>
         <header>
             <div id="entete">
-                <img src="./Images/photo.png" alt="Photo de profil" width="120" height="170" id="photo-de-profil">
+                <a href="./image.html"><img src="./Images/photo.png" alt="Photo de profil" width="120" height="170" id="photo-de-profil"></a>
                 <h1> Ayoub AITBRAHAM </h1><br>
                 <h2> Developpeur Web Junior</h2>
             </div>
@@ -85,11 +85,11 @@
         
         <footer>
             <div id="flex-row2">
-                <a href="https://twitter.com/iz0aX9PqdoAcAXD">
+                <a id="rs1" href="https://twitter.com/iz0aX9PqdoAcAXD">
                     <img src="./Images/twitter.png" alt="Page twitter" width="50" height="50"></a>
-                <a href="https://github.com">
+                <a id="rs2" href="https://github.com">
                     <img src="./Images/github.png" alt="Page github" width="50" height="50"></a>
-                <a href="https://www.linkedin.com">
+                <a id="rs3" href="https://www.linkedin.com">
                     <img src="./Images/linkedin.png" alt="Page linkedin" width="50" height="50"></a>
                 </div>
         </footer>
